1999-04-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* CustomProbeMap.m ([CustomProbeMap
	+create:forClass:withIdentifiers:]): Check for NULL `identifier'
	before deferencing.
	
1999-04-01  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* objectbase.h: Protocol Swarm inherits protocols SwarmProcess and
	CREATABLE.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Make SwarmObject creatable. 

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Add @class DefaultProbeMap.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Revert last change.
	(version.h): Remove.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (INCLUDES): Add JAVAINCLUDES.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.

1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Fix return type of getArg: (val_t), and correct
	documentation for getArg: and getArgName:.

1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Add CREATABLE tags to all non-abstract protocols.

1999-02-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.h (VarProbe): Implement VarProbe, not _VarProbe.

	* objectbase.h (VarProbe, _VarProbe): Merge.

1999-02-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m: Include ../defobj/internal.h.

	* VarProbe.[hm], objectbase.h ([VarProbe -getRank], [VarProbe
	-getDims], [VarProbe -getBaseType], [VarProbe iterateAsDouble:using:],
	[VarProbe iterateAsInteger:using:], [VarProbe -drop]): New methods.
	(probe_as_int): New function.
	([VarProbe -probeAsInt:]): Use it.
	(probe_as_double): New function.
	([VarProbe -probeAsDouble:]): Use it.

	* VarProbe.m ([VarProbe -free]): Remove.

	* VarProbe.h (VarProbe): Add rank, dims, and baseType.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
